--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "shoehut",
   "version": "1.0.0",
   "description": "The beckend of the site shoehut",
+  "repository": {
+    "type": "git", 
+    "url": "https://github.com/yatskiv-yurij/ShoeHut"
+  },
   "main": "index.js",
   "type": "module",
   "scripts": {
