--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "The beckend of the site shoehut",
   "repository": {
-    "type": "git", 
+    "type": "git",
     "url": "https://github.com/yatskiv-yurij/ShoeHut"
   },
   "main": "index.js",
@@ -25,6 +25,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
