--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@emotion/css": "^11.10.5",
+    "@hookform/error-message": "^2.0.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
     "dangerously-set-html-content": "^1.0.9",
     "dangerously-set-inner-html": "^2.0.1",
     "draft-convert": "^2.1.13",
@@ -17,7 +20,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-hook-form": "^7.39.1",
+    "react-jwt": "^1.1.7",
     "react-paginate": "^8.1.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
