The functionality of adding new products and outputting data for editing has been created

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dangerously-set-inner-html": "^2.0.1",
     "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
+    "draft-js-import-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
